# hack4good

./: .gitignore  README.md  requirements.txt
server/: Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  sample_data.json  startup.sh
server/api/: admin.py  app.py  dev.ipynb  models.py  schemas.py  utils.py
server/api/ai/: __init__.py  client.py  utils.py
server/api/google_forms/: __init__.py  connector.py  models.py
server/api/migrations/: 0001_initial.py  0002_event_slug.py  0003_event_image.py  0004_event_end_time_event_location_event_start_time_and_more.py  0005_volunteer_date_created.py  0006_formresponse.py  0007_formresponse_inference_reason.py  0008_rename_inference_reason_formresponse_reason.py  0009_formresponse_event.py  0010_formresponse_submit_date.py  0011_event_google_form_url.py
server/server/: settings.py  urls.py
ui/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
ui/src/: app.d.ts  app.html
ui/src/lib/: AnalyticsCards.svelte  AnalyticsGraph.svelte  DateRangePicker.svelte  EventCard.svelte  Nav.svelte  config.ts  mockData.ts  types.ts  utils.ts
ui/src/lib/components/: AnalyticsCards.svelte  AnalyticsGraph.svelte  DateRangePicker.svelte  EventCard.svelte  FeedbackCard.svelte  Markdown.svelte  Nav.svelte
ui/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
ui/src/routes/events/: +page.server.ts  +page.svelte
ui/src/routes/registration/: +page.server.ts  +page.svelte  registration-form.svelte  schema.ts
ui/src/routes/volunteer/: +page.server.ts  +page.svelte
(+25 files in other folders)
