[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["hewliyang <hewliyang@u.nus.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
instructor = "^0.5.2"
openai = "^1.12.0"
django = "^5.0.2"
django-ninja = "^1.1.0"
django-ninja-extra = "^0.20.4"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.116.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
